# data-structure

./: CMakeLists.txt  README.md
algo/: recur.c  recur.h
linear/array/: sequence_list.c  sequence_list.h  sequence_list_dynamic.c  sequence_list_dynamic.h  sequence_list_test.c
linear/linked-list/: doubly_linked_list.c  doubly_linked_list.h  doubly_linked_list_test.c  singly_linked_list.c  singly_linked_list.h  singly_linked_list_test.c
linear/queue/: linked_queue.c  linked_queue.h  seq_queue.c  seq_queue.h
linear/stack/: linked_stack.c  linked_stack.h  linked_stack_test.c  seq_stack.c  seq_stack.h  seq_stack_test.c
